# indie_studio

./: CMakeLists.txt
assets/FireBomb/bomb/: bomb_000017.mtl
assets/FireBomb/flame/: fire_000044.mtl
assets/Font/test/: score.xml
assets/map/: map.map
game/include/: FireCluster.hpp  GameBomb.hpp  GameClass.hpp  GameClock.hpp  IPlayer.hpp  Map.hpp  MapCreation.hpp  Object.hpp  Player.hpp  PowerUps.hpp  Saver.hpp
game/src/: FireCluster.cpp  GameBomb.cpp  GameClass.cpp  GameClock.cpp  Map.cpp  MapCreation.cpp  Object.cpp  Player.cpp  Saver.cpp
graphic/: CMakeLists.txt
graphic/include/: EventReceiver.hpp  GameGraphic.hpp  MenuPause.hpp  Music.hpp  Sound.hpp  helpers.hpp  my.hpp
graphic/include/Animators/: BombermanRotation.hpp
graphic/include/Objects/: AGameObject.hpp  Bomb.hpp  Bomberman.hpp  Flame.hpp  GameObject.hpp  MeshContainer.hpp
graphic/irrlicht/include/: SMaterial.h  plane3d.h
graphic/map/: map1.txt  map2.txt  map3.txt
graphic/src/: AGameObject.cpp  Bomb.cpp  Bomberman.cpp  BombermanRotation.cpp  Flame.cpp  GameGraphic.cpp  MenuPause.cpp  MeshContainer.cpp  Music.cpp  Sound.cpp  helper.cpp  main.cpp
include/: Core.hpp  DataType.hpp  Display.hpp  object.hpp
irrlicht/: FindIrrlicht.cmake
irrlicht/include/: triangle3d.h
menu/include/: Menu.hpp  Music.hpp
menu/src/: Keys.cpp  Menu.cpp  Music.cpp
src/: Core.cpp  main.cpp
src/Exception/: Exception.cpp  Exception.hpp
src/display/: Display.hpp
